[gd_scene load_steps=45 format=3 uid="uid://qx02gvymgb5o"]

[ext_resource type="Script" path="res://material_maker/tools/undo_redo/undo_redo.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ftx52hy53io2" path="res://material_maker/panels/paint/export.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://dot3yy7v6xa8g" path="res://material_maker/panels/paint/collapse_button.tscn" id="7_q2p7g"]
[ext_resource type="Texture2D" uid="uid://cvorvnes6fiq7" path="res://material_maker/icons/icons.svg" id="7_xm5h4"]
[ext_resource type="PackedScene" uid="uid://d12t30rjvol15" path="res://material_maker/tools/painter/painter.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://drudtoqh4ks4n" path="res://material_maker/panels/paint/paint_layers.tscn" id="13"]
[ext_resource type="Script" path="res://material_maker/panels/paint/paint.gd" id="16"]
[ext_resource type="PackedScene" uid="uid://dy1u50we7gtru" path="res://material_maker/panels/graph_edit/graph_edit.tscn" id="17"]

[sub_resource type="Shader" id="Shader_dye6v"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,unshaded;
uniform sampler2D id_map : source_color,filter_linear_mipmap,repeat_enable;
uniform vec4 id;
uniform bool id_selected;

void fragment() {
	vec4 id_color = texture(id_map, UV);
	if (id_selected) {
		ALBEDO = mix(id_color.rgb, vec3(1.0), step(length(id_color-id), 0.001));
	} else {
		ALBEDO = id_color.rgb;
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_updt6"]
render_priority = 0
shader = SubResource("Shader_dye6v")
shader_parameter/id = null
shader_parameter/id_selected = null

[sub_resource type="Sky" id="2"]
radiance_size = 4

[sub_resource type="Environment" id="3"]
background_mode = 2
sky = SubResource("2")

[sub_resource type="Shader" id="4"]

[sub_resource type="ShaderMaterial" id="5"]
render_priority = 0
shader = SubResource("4")

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("5")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("5")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("5")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("5")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("5")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("5")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("5")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("5")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("5")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("5")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("5")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("5")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("5")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("5")
region = Rect2(224, 224, 32, 32)

[sub_resource type="Shortcut" id="23"]

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("5")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("5")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("5")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("5")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbo1"]
atlas = ExtResource("7_xm5h4")
region = Rect2(160, 97, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d2yp"]
atlas = ExtResource("7_xm5h4")
region = Rect2(144, 97, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viu0"]
atlas = ExtResource("7_xm5h4")
region = Rect2(160, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_610no"]
atlas = ExtResource("7_xm5h4")
region = Rect2(144, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_56usa"]
atlas = ExtResource("7_xm5h4")
region = Rect2(144, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_knugp"]
atlas = ExtResource("5")
region = Rect2(128, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8gfk"]
atlas = ExtResource("5")
region = Rect2(0, 144, 32, 16)

[sub_resource type="Shader" id="30"]
code = "shader_type canvas_item;

uniform sampler2D tex;
uniform vec2 preview_2d_size;
uniform float preview_2d_scale = 1.0;
uniform vec2 preview_2d_center = vec2(0.5);

void fragment() {
	vec2 ratio = preview_2d_size;
	vec2 uv = preview_2d_center+(UV-0.5)*preview_2d_scale*ratio/min(ratio.x, ratio.y);
	if (uv.x < 0.0 || uv.x > 1.0 || uv.y < 0.0 || uv.y > 1.0) {
		COLOR = vec4(0.0);
	} else {
		vec4 image = texture(tex, uv);
		float checkerboard = mod(floor(uv.x*32.0)+floor(uv.y*32.0), 2.0);
		vec3 image_with_background = mix(vec3(checkerboard), image.xyz, image.a);
		COLOR = vec4(image_with_background, 1.0);
	}
}
"

[sub_resource type="ShaderMaterial" id="31"]
shader = SubResource("30")
shader_parameter/preview_2d_size = null
shader_parameter/preview_2d_scale = 1.0
shader_parameter/preview_2d_center = Vector2(0.5, 0.5)

[node name="MaterialSpray" type="VBoxContainer" groups=["preview"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1199.0
offset_bottom = 799.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16")
mask_selection_material_template = SubResource("ShaderMaterial_updt6")

[node name="Painter" parent="." instance=ExtResource("12")]

[node name="PaintLayers" parent="." instance=ExtResource("13")]
painter = NodePath("../Painter")

[node name="Export" parent="." instance=ExtResource("3")]

[node name="UndoRedo" type="Node" parent="."]
script = ExtResource("1")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
split_offset = 480

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
clip_contents = true
layout_mode = 2
split_offset = 800

[node name="Painter" type="Control" parent="VSplitContainer/HSplitContainer"]
clip_contents = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="View" type="SubViewportContainer" parent="VSplitContainer/HSplitContainer/Painter"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
stretch = true

[node name="MainView" type="SubViewport" parent="VSplitContainer/HSplitContainer/Painter/View"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(800, 480)
render_target_update_mode = 4

[node name="CameraPosition" type="Node3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView"]

[node name="CameraRotation1" type="Node3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView/CameraPosition"]

[node name="CameraRotation2" type="Node3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView/CameraPosition/CameraRotation1"]

[node name="Camera3D" type="Camera3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView/CameraPosition/CameraRotation1/CameraRotation2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
environment = SubResource("3")
current = true
near = 1.0
far = 4.0

[node name="PaintedMesh" type="MeshInstance3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView"]

[node name="Sun" type="DirectionalLight3D" parent="VSplitContainer/HSplitContainer/Painter/View/MainView"]

[node name="BrushView" type="ColorRect" parent="VSplitContainer/HSplitContainer/Painter"]
visible = false
material = SubResource("5")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Tools" type="HBoxContainer" parent="VSplitContainer/HSplitContainer/Painter"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 194.0
offset_bottom = 32.0
theme_override_constants/separation = 0

[node name="Engine" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
layout_mode = 2
tooltip_text = "View space paint engine"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("32")
texture_pressed = SubResource("33")

[node name="Space1" type="Control" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="FreeDots" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Freehand"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("8")
texture_pressed = SubResource("9")

[node name="FreeLine" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Freehand line"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("12")
texture_pressed = SubResource("13")

[node name="Line" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Lines"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("16")
texture_pressed = SubResource("17")

[node name="Stamp" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Stamp"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("39")
texture_pressed = SubResource("40")

[node name="ColorPicker" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
layout_mode = 2
tooltip_text = "Color Picker"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("37")
texture_pressed = SubResource("38")

[node name="Space2" type="Control" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Fill" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Fill"
shortcut_in_tooltip = false
texture_normal = SubResource("20")
texture_pressed = SubResource("21")

[node name="Space3" type="Control" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Eraser" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
layout_mode = 2
tooltip_text = "Toggle Eraser Mode (E)"
toggle_mode = true
shortcut = SubResource("23")
shortcut_in_tooltip = false
texture_normal = SubResource("24")
texture_pressed = SubResource("25")

[node name="Space4" type="Control" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="MaskSelector" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/Tools"]
layout_mode = 2
tooltip_text = "Mask Selector"
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("28")
texture_pressed = SubResource("36")

[node name="OptionsPanel" type="PanelContainer" parent="VSplitContainer/HSplitContainer/Painter"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9975
anchor_top = 0.00416667
anchor_right = 0.9975
anchor_bottom = 0.00416667
offset_left = -165.0
offset_bottom = 381.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel"]
layout_mode = 2

[node name="BrushButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer" node_paths=PackedStringArray("node") instance=ExtResource("7_q2p7g")]
layout_mode = 2
node = NodePath("../Brush")

[node name="Brush" type="GridContainer" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="BrushSizeLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2
text = "Size"

[node name="PressureSize" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Pressure"
toggle_mode = true
texture_normal = SubResource("AtlasTexture_3lbo1")
texture_pressed = SubResource("AtlasTexture_7d2yp")
texture_hover = SubResource("AtlasTexture_7d2yp")

[node name="BrushSize" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
max_value = 250.0
step = 1.0
float_only = true

[node name="BrushAngleLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2
text = "Angle"

[node name="TiltAngle" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Tilt"
toggle_mode = true
texture_normal = SubResource("AtlasTexture_8viu0")
texture_pressed = SubResource("AtlasTexture_610no")
texture_hover = SubResource("AtlasTexture_56usa")

[node name="BrushAngle" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
min_value = -180.0
max_value = 180.0
step = 1.0
float_only = true

[node name="BrushSpacingLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2
text = "Spacing"

[node name="Empty1" type="Control" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2

[node name="BrushSpacing" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 1.0
min_value = 1.0
max_value = 250.0
step = 1.0
float_only = true

[node name="BrushOpacityLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2
text = "Opacity"

[node name="PressureOpacity" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Pressure"
toggle_mode = true
texture_normal = SubResource("AtlasTexture_3lbo1")
texture_pressed = SubResource("AtlasTexture_7d2yp")
texture_hover = SubResource("AtlasTexture_7d2yp")

[node name="BrushOpacity" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 1.0
step = 0.01
float_only = true

[node name="BrushHardnessLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
layout_mode = 2
text = "Hardness"

[node name="PressureHardness" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Pressure"
toggle_mode = true
texture_normal = SubResource("AtlasTexture_3lbo1")
texture_pressed = SubResource("AtlasTexture_7d2yp")
texture_hover = SubResource("AtlasTexture_7d2yp")

[node name="BrushHardness" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
float_only = true

[node name="JitterButton" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer" node_paths=PackedStringArray("node") instance=ExtResource("7_q2p7g")]
layout_mode = 2
text = "Jitter"
node = NodePath("../Jitter")

[node name="Jitter" type="GridContainer" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="JitterPositionLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
layout_mode = 2
text = "Position"

[node name="JitterPosition" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
max_value = 250.0
step = 1.0
float_only = true

[node name="JitterSizeLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
layout_mode = 2
text = "Size"

[node name="JitterSize" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
step = 0.01
float_only = true

[node name="JitterAngleLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
layout_mode = 2
text = "Angle"

[node name="JitterAngle" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
step = 0.01
float_only = true

[node name="JitterOpacityLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
layout_mode = 2
text = "Opacity"

[node name="JitterOpacity" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
step = 0.01
float_only = true

[node name="JitterHardnessLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
visible = false
layout_mode = 2
text = "Hardness"

[node name="JitterHardness" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
value = 1.0
step = 0.01
float_only = true

[node name="JitterSpacingLabel" type="Label" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter"]
visible = false
layout_mode = 2
text = "Spacing"

[node name="JitterSpacing" parent="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter" instance=ExtResource("4")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
value = 1.0
min_value = 1.0
max_value = 250.0
step = 1.0
float_only = true

[node name="Show2DPaint" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -50.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_knugp")
ignore_texture_size = true
stretch_mode = 4

[node name="ShowBrushGraph" type="TextureButton" parent="VSplitContainer/HSplitContainer/Painter"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -16.0
offset_right = -18.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_g8gfk")
ignore_texture_size = true
stretch_mode = 4

[node name="Painter2D" type="Control" parent="VSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/HSplitContainer/Painter2D"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChannelSelect" type="OptionButton" parent="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer"]
layout_mode = 2

[node name="Texture2D" type="ColorRect" parent="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer"]
material = SubResource("31")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="BrushView" type="ColorRect" parent="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer/Texture2D"]
visible = false
material = SubResource("5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GraphEdit" parent="VSplitContainer" instance=ExtResource("17")]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
scroll_offset = Vector2(0, -308)
shader_context_defs = "uniform sampler2D mesh_normal_tex;
"

[connection signal="painted" from="Painter" to="PaintLayers" method="_on_Painter_painted"]
[connection signal="layer_selected" from="PaintLayers" to="." method="_on_PaintLayers_layer_selected"]
[connection signal="dragged" from="VSplitContainer" to="." method="_on_v_split_container_dragged"]
[connection signal="dragged" from="VSplitContainer/HSplitContainer" to="." method="_on_h_split_container_dragged"]
[connection signal="gui_input" from="VSplitContainer/HSplitContainer/Painter/View" to="." method="_on_View_gui_input"]
[connection signal="mouse_entered" from="VSplitContainer/HSplitContainer/Painter/View" to="." method="_on_View_mouse_entered"]
[connection signal="mouse_exited" from="VSplitContainer/HSplitContainer/Painter/View" to="." method="_on_View_mouse_exited"]
[connection signal="resized" from="VSplitContainer/HSplitContainer/Painter/View" to="." method="_on_resized"]
[connection signal="toggled" from="VSplitContainer/HSplitContainer/Painter/Tools/Engine" to="." method="_on_Engine_toggled"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/FreeDots" to="." method="set_current_tool" binds= [0]]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/FreeLine" to="." method="set_current_tool" binds= [1]]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/Line" to="." method="set_current_tool" binds= [2]]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/Stamp" to="." method="set_current_tool" binds= [3]]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/ColorPicker" to="." method="set_current_tool" binds= [4]]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/Fill" to="." method="_on_Fill_pressed"]
[connection signal="toggled" from="VSplitContainer/HSplitContainer/Painter/Tools/Eraser" to="." method="_on_Eraser_toggled"]
[connection signal="gui_input" from="VSplitContainer/HSplitContainer/Painter/Tools/MaskSelector" to="." method="_on_mask_selector_gui_input"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Tools/MaskSelector" to="." method="set_current_tool" binds= [5]]
[connection signal="minimum_size_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel" to="." method="_on_options_panel_minimum_size_changed"]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush/BrushSize" to="." method="_on_Brush_value_changed" binds= ["brush_size"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush/BrushAngle" to="." method="_on_Brush_value_changed" binds= ["brush_size"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Brush/BrushHardness" to="." method="_on_Brush_value_changed" binds= ["brush_hardness"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterPosition" to="." method="_on_Brush_value_changed" binds= ["jitter_position"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterSize" to="." method="_on_Brush_value_changed" binds= ["jitter_size"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterAngle" to="." method="_on_Brush_value_changed" binds= ["jitter_angle"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterOpacity" to="." method="_on_Brush_value_changed" binds= ["jitter_opacity"]]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterHardness" to="." method="_on_BrushHardness_value_changed"]
[connection signal="value_changed" from="VSplitContainer/HSplitContainer/Painter/OptionsPanel/VBoxContainer/Jitter/JitterSpacing" to="." method="_on_BrushOpacity_value_changed"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/Show2DPaint" to="." method="_on_show_2d_paint_pressed"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/Painter/ShowBrushGraph" to="." method="_on_show_brush_graph_pressed"]
[connection signal="item_selected" from="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer/ChannelSelect" to="." method="_on_ChannelSelect_item_selected"]
[connection signal="gui_input" from="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer/Texture2D" to="." method="_on_Texture_gui_input"]
[connection signal="resized" from="VSplitContainer/HSplitContainer/Painter2D/VBoxContainer/Texture2D" to="." method="_on_Texture_resized"]
[connection signal="gui_input" from="VSplitContainer/GraphEdit" to="VSplitContainer/GraphEdit" method="_gui_input"]
